# Galen

./: .gitignore  .gitmodules  Galen.sln  README.md  galen_opengl.h
GalenOpenGL/: GalenOpenGL.vcxproj  GalenOpenGL.vcxproj.filters  galen_opengl.h
GalenOpenGL/header/: application.h  core.h  entry_point.h  galen_opengl.h  test.h
GalenOpenGL/source/: application.cpp  test.cpp
OpenGLTest/: CMakeLists.txt  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  imgui.ini  main.cpp
OpenGLTest/header/: application.h  core.h  debugbreak.h  gui.h  index_buffer.h  renderer.h  shader_program.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
OpenGLTest/res/shaders/: blend.vert  hello_triangle.frag  polygon.frag  polygon.vert  polygon_interpolation.frag  polygon_interpolation.vert  polygon_invert.frag  polygon_invert.vert  polygon_uniform.frag  test.frag  test.vert  test_polygon_01_01.frag  test_polygon_01_02.frag  test_polygon_01_03.vert  test_triangle_01_02.vert  test_triangle_01_03_yellow.frag
OpenGLTest/source/: application.cpp  core.cpp  gui.cpp  index_buffer.cpp  renderer.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
OpenGLTest/test/: test.cpp  test.h  test_clear_color.cpp  test_clear_color.h  test_list.h  test_menu.cpp  test_menu.h  test_polygon_01_01.cpp  test_polygon_01_01.h  test_polygon_01_02.cpp  test_polygon_01_02.h  test_polygon_01_03.cpp  test_polygon_01_03.h  test_texture.cpp  test_texture.h  test_triangle.cpp  test_triangle.h  test_triangle_01_01.cpp  test_triangle_01_01.h  test_triangle_01_02.cpp  test_triangle_01_02.h  test_triangle_01_03.cpp  test_triangle_01_03.h
OpenGLTest/test/header/: test_blend.h  test_interpolation.h  test_list.h  test_polygon.h  test_polygon_01_02.h  test_texture.h  test_triangle_01_01.h  test_triangle_01_03.h
OpenGLTest/test/source/: test_blend.cpp  test_clear_color.cpp  test_interpolation.cpp  test_polygon.cpp  test_polygon_01_01.cpp  test_polygon_01_02.cpp  test_polygon_01_03.cpp  test_texture.cpp  test_triangle_01_01.cpp  test_triangle_01_03.cpp
OpenGLTest/vendors/glew/: glew.pc
OpenGLTest/vendors/glew/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
OpenGLTest/vendors/glfw/x86/docs/: Doxyfile
OpenGLTest/vendors/glfw/x86/src/: glfw3.pc
OpenGLTest/vendors/stb_image/: stb_image.vcxproj  stb_image.vcxproj.filters
SanboxOpenGL/: SanboxOpenGL.vcxproj  SanboxOpenGL.vcxproj.filters
SanboxOpenGL/header/: sandbox_app.h
SanboxOpenGL/source/: main.cpp  sandbox_app.cpp
